Grease pencil. Stroke color do not match to object`s color #87406

Closed
opened 2021-04-12 00:37:12 +02:00 by Vyacheslav Kobozev · 21 comments

System Information
Operating system: Windows-8.1-6.3.9600-SP0 64 Bits
Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.40

Blender Version
Broken: since 2.83.9 version: 2.93.0 Alpha, branch: master, commit date: 2021-04-10 16:36, hash: ed5507de8a

Short description of error
When I set full saturation for object color, GP-stroke switches to pale tone.

12063625.png

2021-04-12_01-24-36.mp4

GP object color.blend

**System Information** Operating system: Windows-8.1-6.3.9600-SP0 64 Bits Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.40 **Blender Version** Broken: since 2.83.9 version: 2.93.0 Alpha, branch: master, commit date: 2021-04-10 16:36, hash: `ed5507de8a` **Short description of error** When I set full saturation for object color, GP-stroke switches to pale tone. ![12063625.png](https://archive.blender.org/developer/F9929824/12063625.png) [2021-04-12_01-24-36.mp4](https://archive.blender.org/developer/F9929826/2021-04-12_01-24-36.mp4) [GP object color.blend](https://archive.blender.org/developer/F9929828/GP_object_color.blend)

Added subscriber: @Vyach

Added subscriber: @Vyach
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Falk David self-assigned this 2021-04-12 10:17:32 +02:00
Member

I can confirm this in the latest 2.93.0 Alpha, branch: master, commit date: 2021-04-12 07:18, hash: 175c1382da. Will take a look.

I can confirm this in the latest 2.93.0 Alpha, branch: master, commit date: 2021-04-12 07:18, hash: `175c1382da`. Will take a look.

Added subscriber: @antoniov

Added subscriber: @antoniov

Yes, confirmed...look if the problem is the Linear->sRGB conversion

Yes, confirmed...look if the problem is the Linear->sRGB conversion
Member

@Vyach The color shift was done intentionally (to make strokes and fills visually differentiable). The fix attached makes it so that if the Lighting in the Viewport Settings is set to "Flat", all the strokes and fills will be set to the same color.

@Vyach The color shift was done intentionally (to make strokes and fills visually differentiable). The fix attached makes it so that if the Lighting in the Viewport Settings is set to "Flat", all the strokes and fills will be set to the same color.

Added subscriber: @1D_Inc

Added subscriber: @1D_Inc

@filedescriptor umm…
I would prefer to select technical color manually to see all better.
Cant agree with such intensions. Similar problem appears with wireframes: I cant make em exact same color, as I set. They always darker or lighter…
It produces many problems with complex scenes. @1D_Inc can explain it better and already did it.

And flat mode wouldn`t help much. I use annotation as BSurfaces guide in work with different colors of surface. And I need to see exact same technical/object color as I choose.
This color shift limits me in color selection.

Please take in account, that ppl can use custom themes, custom viewport backgroungs, and it is important to get what you select, to achieve desirable contrast

@filedescriptor umm… I would prefer to select technical color manually to see all better. Can`t agree with such intensions. Similar problem appears with wireframes: I can`t make em exact same color, as I set. They always darker or lighter… It produces many problems with complex scenes. @1D_Inc can explain it better and already did it. And flat mode wouldn`t help much. I use annotation as BSurfaces guide in work with different colors of surface. And I need to see exact same technical/object color as I choose. This color shift limits me in color selection. Please take in account, that ppl can use custom themes, custom viewport backgroungs, and it is important to get what you select, to achieve desirable contrast
Member

@Vyach And why is it an issue to use the material color and not the object color? It seems to me like the object color is not really what you are looking for.

@Vyach And why is it an issue to use the material color and not the object color? It seems to me like the object color is not really what you are looking for.

In #87406#1145347, @filedescriptor wrote:
@Vyach And why is it an issue to use the material color and not the object color? It seems to me like the object color is not really what you are looking for.

Because for material color you need to set materials for GP and for objects for example.
I do retopo now with GP. So no reason to create empty bunch of meterials just for viewport-colors.

There can be objects with different meterial colors (few per object), they can have same object colors. Material color is more for fast color preview, feling scene in Workbench. More artistical.
Object color is technial. Both gives ability to switch between one and few colors per object.
изображение.png

Also color changes hardly between wireframe and solid mode (relative issue, after «intended change»)
I recorded video with explanation, if it is not so obvious.
https://youtu.be/2nht7BrmScg

> In #87406#1145347, @filedescriptor wrote: > @Vyach And why is it an issue to use the material color and not the object color? It seems to me like the object color is not really what you are looking for. Because for material color you need to set materials for GP and for objects for example. I do retopo now with GP. So no reason to create empty bunch of meterials just for viewport-colors. There can be objects with different meterial colors (few per object), they can have same object colors. Material color is more for fast color preview, feling scene in Workbench. More artistical. Object color is technial. Both gives ability to switch between one and few colors per object. ![изображение.png](https://archive.blender.org/developer/F9930706/изображение.png) Also color changes hardly between wireframe and solid mode (relative issue, after «intended change») I recorded video with explanation, if it is not so obvious. https://youtu.be/2nht7BrmScg

With the change proposed by @filedescriptor you just can set as Flat and you get what you want. Grease Pencil main focus is 2D animation, so get the strokes and fills with a slightly different color is very good. Maybe, for you user case can be annoying, but we cannot set something by default that is against general 2D animation.

With the change proposed by @filedescriptor you just can set as Flat and you get what you want. Grease Pencil main focus is 2D animation, so get the strokes and fills with a slightly different color is very good. Maybe, for you user case can be annoying, but we cannot set something by default that is against general 2D animation.

@antoniov

  1. Here 2 strokes with very different colors. And they are almost similar in workbench.
    GPcolors.blend

  2. Object color is technical stuff. For animation, when you use a lot of colors and layers, you can use material colors.

  3. I cant understand why color should jump to desaturated, esp for Workbench, not for render. Where I can read about usecases? When I want to have pale color, I can set it. When I want to use saturated… Now I cant.

  4. Flat mode in viewport will make objects flat too, so I can`t read surface anymore.

Why do I use GP for retopo? It is cool and easy to edit (sculpt tools), and annotation isn`t.

So I agree it is animators tool first. But cant understand the reason to spoil workbench color.

@antoniov 1. Here 2 strokes with very different colors. And they are almost similar in workbench. [GPcolors.blend](https://archive.blender.org/developer/F9930734/GPcolors.blend) 2. Object color is technical stuff. For animation, when you use a lot of colors and layers, you can use material colors. 3. I can`t understand why color should jump to desaturated, esp for Workbench, not for render. Where I can read about usecases? When I want to have pale color, I can set it. When I want to use saturated… Now I can`t. 4. Flat mode in viewport will make objects flat too, so I can`t read surface anymore. Why do I use GP for retopo? It is cool and easy to edit (sculpt tools), and annotation isn`t. So I agree it is animators` tool first. But can`t understand the reason to spoil workbench color.

It looks like this issue is about general 2d animation vs general consistency.
Technicaly, reasons to provide the difference between stroke and fill are inderstandable, but realization is rough because is illogical and unexpected.
There are a lot of things in Blender that can be technically solved as local overrides, but following this way is not the best way to design software, because harms general consistency.

Maybe adding a preference that controls this effect (for example, its range) can help to solve this issue and also provide GP color shift effect flexibility as well.

It looks like this issue is about general 2d animation vs general consistency. Technicaly, reasons to provide the difference between stroke and fill are inderstandable, but realization is rough because is illogical and unexpected. There are a lot of things in Blender that can be technically solved as local overrides, but following this way is not the best way to design software, because harms general consistency. Maybe adding a preference that controls this effect (for example, its range) can help to solve this issue and also provide GP color shift effect flexibility as well.

This issue was referenced by 7c18fb062d

This issue was referenced by 7c18fb062d3656ec76e4e8c1045e7a8c9d44b132

The gpencil team has been discussing about this problem and we have decide to swap the coloring change to fill, so in you case the stroke will have the same color you select. Also, we keep the patch done by @filedescriptor to set flat color.

The gpencil team has been discussing about this problem and we have decide to swap the coloring change to fill, so in you case the stroke will have the same color you select. Also, we keep the patch done by @filedescriptor to set flat color.

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

@antoniov Thanks for sharing your time for this :)

@antoniov Thanks for sharing your time for this :)

In #87406#1146458, @antoniov wrote:
swap the coloring change to fill, so in you case the stroke will have the same color you select.

Well, still pretty far from being clean solution (because is a local override), but with a smaller critical area, because stroke is used more often than fill.

> In #87406#1146458, @antoniov wrote: > swap the coloring change to fill, so in you case the stroke will have the same color you select. Well, still pretty far from being clean solution (because is a local override), but with a smaller critical area, because stroke is used more often than fill.

@1D_Inc We are not closed to add a user prefs setting for this, but we prefer to be very conservative before adding new options to avoid populating too much the user preferences screen. If we see in the future this is requested for more users, we can consider adding it.

@1D_Inc We are not closed to add a user prefs setting for this, but we prefer to be very conservative before adding new options to avoid populating too much the user preferences screen. If we see in the future this is requested for more users, we can consider adding it.

Nice strategy, pretty safe.
Wise solution, because adding preferences increase software fragmentation.
Thank you.

Nice strategy, pretty safe. Wise solution, because adding preferences increase software fragmentation. Thank you.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87406
No description provided.