GPencil: Invert color offsetting for Single and Object mode

Now, instead to offset the stroke color to make it visible over fill, the stroke keeps the original color and the fill is offset.

Related to the issue in T87406.